# Face-Recognizer

./: .gitignore  LICENSE  README.md
bash/: changeImage.sh
inc/: afd_engine.h  afr_engine.h  age_engine.h  amcomdef.h  arcsoft_fsdk_age_estimation.h  arcsoft_fsdk_face_detection.h  arcsoft_fsdk_gender_estimation.h  config.h  gender_engine.h  header.h  helpStruct.h  job.h  mysqlHelp.h  thread.h  usb_help.h  utils.h
recognitionImage/: recognition1.yuv  recognition2.yuv  recognition3.yuv  recognition4.yuv  recognition5.yuv  register.yuv
src/: .gitignore  CMakeLists.txt  arcsoft_resource.cpp
